--- a/css/styles.css
+++ b/css/styles.css
@@ -164,11 +164,11 @@ a:visited {
 }
 
 #juan-tenezaca-cover{
-  
+  background-image: url(https://i.imgur.com/YcnRo04.jpg);
 }
 
 #juan-tenezaca-card{
-  
+
 }
 
 .view-profile-div {
