--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ a:visited {
 }
 
 #juan-tenezaca-cover{
-  background-image: url(https://i.imgur.com/YcnRo04.jpg);
+  background-image: url("https://i.imgur.com/YcnRo04.jpg");
 }
 
 #juan-tenezaca-card{
