automatically backed up by learn

--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ a:visited {
 }
 
 #juan-tenezaca-card{
-  background-image: url("https://i.imgur.com/oNrZZjM.jpg")
+  background-image: url("https://i.imgur.com/oNrZZjM.jpg");
 }
 
 .view-profile-div {
