--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,14 @@ a:visited {
  background-image: url("https://learn-verified.s3.amazonaws.com/diane-vu.jpg");
 }
 
+#juan-tenezaca-cover{
+  background-image: url("https://i.imgur.com/YcnRo04.jpg");
+}
+
+#juan-tenezaca-card{
+  background-image: url("https://i.imgur.com/oNrZZjM.jpg");
+}
+
 .view-profile-div {
   position: absolute;
   bottom: 0;
